Cleanup layout issues
Layout was using weird names and margins.

--- a/src/theme/_layout.scss
+++ b/src/theme/_layout.scss
@@ -1,20 +1,26 @@
 @import "spacing";
 @import "typography";
 
+@mixin vertical-spacing() {
+    margin-bottom: $leading-normal;
+}
+
 .appbar {
+    @include vertical-spacing();
     background: $color-primary;
     width: 100%;
-}
-
-.tile {
-    margin: $leading-normal $spacing-none;
-}
-
-.row {
-    @include container();
 }
 
 .main {
     @include expand();
     overflow-y: scroll;
 }
+
+.section {
+    @include vertical-spacing();
+}
+
+.row {
+    @include container();
+}
+
